# ruline

./: .dockerignore  .gitignore  .rustfmt.toml  .taplo.toml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.base.yml  docker-compose.dev.yml
.github/actions/node/: action.yml
.github/actions/rust/: action.yml
.github/workflows/: lint.yml  test.yml
crates/ruline-action/: Cargo.toml
crates/ruline-action/src/: error.rs  lib.rs
crates/ruline-action/tests/: set_variable.rs
crates/ruline-action/tests/snapshots/: set_variable__set_variable_invalid_value.snap  set_variable__set_variable_invalid_variable_type.snap
crates/ruline-admin/: Cargo.toml
crates/ruline-admin/src/: main.rs
crates/ruline-condition/: Cargo.toml
crates/ruline-condition/benches/: mod.rs
crates/ruline-condition/src/: error.rs  evaluate.rs  lib.rs  test.rs
crates/ruline-condition/src/comparison/: error.rs  mod.rs  negate.rs  predicate.rs  validate.rs
crates/ruline-condition/tests/: comparison.rs  condition.rs
crates/ruline-condition/tests/snapshots/: comparison__contains_operands_amount_invalid.snap  comparison__empty_operands_amount_invalid.snap  comparison__empty_operands_empty.snap  comparison__equals_operands_amount_invalid.snap  comparison__exists_operands_amount_invalid.snap  comparison__greater_than_or_equal_operands_amount_invalid.snap  comparison__greater_than_or_equal_operands_empty.snap  comparison__less_than_or_equal_operand_types_mismatch.snap  condition__deserialize_binary_error_expression_missing.snap  condition__deserialize_decision_error_expressions_mismatch.snap  condition__deserialize_decision_error_expressions_missing.snap  condition__deserialize_error_invalid_comparison_operator.snap  condition__deserialize_error_invalid_comparison_operator_type.snap  condition__deserialize_error_invalid_logical_operator.snap  condition__deserialize_error_invalid_results.snap  condition__deserialize_error_invalid_type.snap  condition__expression_invalid_decision_expressions_empty.snap  condition__expression_invalid_decision_expressions_mismatch.snap  condition__logical_child_missing.snap  condition__logical_count_invalid.snap
crates/ruline-console/: Cargo.toml
crates/ruline-console/src/: api.rs  cache.rs  client.rs  db.rs  domain.rs  editor.rs  error.rs  lib.rs  main.rs  template.rs  util.rs
crates/ruline-console/src/api/: invitation.rs  login.rs  organization.rs  project.rs  session.rs  settings.rs  signup.rs  user.rs  workflow.rs
crates/ruline-console/src/cache/: error.rs  model.rs  query.rs
crates/ruline-console/src/cache/model/: member.rs  organization.rs  session.rs  user.rs
crates/ruline-console/src/cache/query/: sessions.rs
crates/ruline-console/src/client/: email.rs  error.rs  google.rs  resend.rs
crates/ruline-console/src/client/email/: resend.rs  smpt.rs
crates/ruline-console/src/db/: error.rs  model.rs  query.rs
crates/ruline-console/src/db/model/: invitation.rs  member.rs  organization.rs  project.rs  user.rs  workflow.rs
crates/ruline-console/src/db/query/: invitations.rs  members.rs  organizations.rs  projects.rs  users.rs  workflows.rs
crates/ruline-console/src/domain/: invitation.rs  member.rs  organization.rs  project.rs  session.rs  user.rs  workflow.rs
crates/ruline-context/: Cargo.toml
crates/ruline-context/src/: lib.rs
crates/ruline-field/: Cargo.toml
crates/ruline-field/src/: error.rs  lib.rs  test.rs
crates/ruline-field/src/function/: error.rs  func.rs  mod.rs  validate.rs
crates/ruline-field/tests/: field.rs  function.rs
crates/ruline-field/tests/snapshots/: field__get_data_field_not_found.snap  field__get_output_field_not_found.snap  field__get_variable_field_not_found.snap  field__serialization_invalid_field_type.snap  field__serialization_invalid_type.snap  function__function_field_abs_invalid_arg_count.snap  function__function_field_add_invalid_arg_count.snap  function__function_field_join_invalid_arg_count.snap  function__function_field_mod_invalid_arg_count.snap  function__function_field_mul_invalid_arg_type_vec.snap  function__function_field_pow_invalid_arg_count.snap  function__function_field_upper_invalid_arg_count.snap  function__function_invalid_function.snap
crates/ruline-output/: Cargo.toml
crates/ruline-output/src/: error.rs  lib.rs
crates/ruline-output/tests/: output.rs
crates/ruline-output/tests/snapshots/: output__output_invalid_field_type.snap
crates/ruline-workflow/: Cargo.toml
crates/ruline-workflow/src/: error.rs  lib.rs
crates/ruline-workflow/tests/: workflow.rs
crates/ruline-workflow/tests/snapshots/: workflow__cyclic_workflow.snap  workflow__workflow_component_dependency_not_found.snap  workflow__workflow_component_missing_definition.snap  workflow__workflow_component_missing_type.snap  workflow__workflow_component_name_missing.snap  workflow__workflow_components_malformed.snap  workflow__workflow_missing_variables.snap  workflow__workflow_output_malformed.snap
db/: atlas.hcl  schema.hcl
db/migrations/: 20241026040144.sql  atlas.sum
ui/: .gitignore  .prettierignore  package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.js  tsconfig.json
ui/src/: app.css  app.tsx  index.tsx  routeTree.gen.ts
ui/src/api/: editor.ts  invitation.ts  login.ts  organization.ts  project.ts  session.ts  settings.ts  signup.ts  user.ts  workflow.ts
ui/src/components/: Alert.tsx  AuthForm.tsx  Avatar.tsx  Badge.tsx  Breadcrumb.tsx  Button.tsx  Dialog.tsx  Dropdown.tsx  Icon.tsx  IconButton.tsx  Input.tsx  List.tsx  Navbar.tsx  OnboardingForm.tsx  Popover.tsx  Select.tsx  Sidebar.tsx  Tooltip.tsx
ui/src/components/props/: color.ts  size.ts
ui/src/components/utils/: cn.ts
ui/src/emails/: invitation.tsx  login.tsx
ui/src/hooks/: auth.ts  auth.tsx  editor.ts  invitation.ts  link.ts  organization.ts  project.ts  settings.ts  user.ts  workflow.ts
ui/src/routes/: __root.tsx  _authed.tsx  index.lazy.tsx  index.tsx  login.tsx  signup.tsx
ui/src/routes/_authed/: index.lazy.tsx  index.tsx  onboarding.tsx
ui/src/stores/: magic-link.ts
(+12 files in other folders)
