[package]
name    = "ruline-condition"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace  = true

[dependencies]
anyhow      = { workspace = true }
fixedbitset = { version = "0.4.2" }
petgraph    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }

ruline-context = { workspace = true }
ruline-field   = { workspace = true }

[dev-dependencies]
criterion         = { workspace = true }
dashmap           = { workspace = true }
insta             = { workspace = true }
pretty_assertions = { workspace = true }
serde_stacker     = { workspace = true }

[[bench]]
harness = false
name    = "mod"
