[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name              = "ruline-console"
readme.workspace  = true
version           = "0.1.0"

[dependencies]
anyhow     = { workspace = true }
dashmap    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }

axum       = { version = "0.7.6", features = ["macros", "ws"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
base64     = { version = "0.22.1" }
chrono     = { version = "0.4.38", features = ["serde"] }
dotenvy    = { version = "0.15.7" }
envy       = { version = "0.4.2" }
hmac       = { version = "0.12.1" }
rand       = { version = "0.8.5" }
redis      = { version = "0.27.2", features = ["tokio-comp"] }
reqwest    = { version = "0.12.7", features = ["json"] }
sqlx       = { version = "0.8.2", features = ["chrono", "mysql", "runtime-tokio"] }
tower-http = { version = "0.6.0", features = ["fs", "compression-gzip", "trace"] }
ulid       = { version = "1.1.3", features = ["serde"] }
