[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name              = "ruline-console"
readme.workspace  = true
version           = "0.1.0"

[dependencies]
anyhow      = { workspace = true }
async-trait = { workspace = true }
dashmap     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }

axum = { version = "0.7.6", features = ["macros", "ws"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = { version = "0.15.7" }
envy = { version = "0.4.2" }
hex = { version = "0.4" }
lettre = { version = "0.11", default-features = false, features = [
  "builder",
  "hostname",
  "pool",
  "smtp-transport",
  "tokio1-rustls-tls",
  "tracing",
] }
opentelemetry = { version = "0.26.0" }
opentelemetry-otlp = { version = "0.26.0" }
opentelemetry-semantic-conventions = { version = "0.26.0" }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
rand = { version = "0.8.5" }
redis = { version = "0.27.2", features = ["tokio-comp"] }
reqwest = { version = "0.12.0", default-features = false }
reqwest-middleware = { version = "0.3", features = ["json", "rustls-tls"] }
sha2 = { version = "0.10.8" }
sqlx = { version = "0.8.2", features = ["chrono", "mysql", "runtime-tokio"] }
tinytemplate = { version = "1.2.1" }
tower-http = { version = "0.6.0", features = ["fs", "compression-gzip", "trace"] }
tracing = { version = "0.1.35" }
tracing-opentelemetry = { version = "0.27.0" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = { version = "1.1.3", features = ["serde"] }
